css/index.css
@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Pacifico&display=swap');

body {
    background-color: #fce7f0;
}

/* Header styles */
.main-header {
    background-color: #f3afcc;
    color: #fff;
    padding: 10px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: #413f3f;
}

.logo img {
    max-width: 40px;
    height: auto;
    margin-left: 80px;
    border-radius: 50%;
}

.nav-items {
    list-style: none;
    padding: 0;
    display: flex;
    gap: 20px;
    margin-right: 80px;
}

.nav-item {
    margin: 0;
}

.nav-item a {
    font-family: "Concert One", sans-serif;
    color: #413f3f;
    text-decoration: none;
    padding: 5px 10px;
    border-radius: 5px;
    transition: 0.15s ease-in-out;
    cursor: pointer;
}

.nav-item a:hover {
    color: white;
}

/* Main styles */

.start {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    gap: px;
    color:#222222;
}

.title {
    font-family: "Pacifico", sans-serif;
    font-size: 60px;
    text-shadow: 0 4px 0 lightpink, 0 -4px 0 lightblue;
}

.subtitle {
    font-family: "Concert One", sans-serif;
    font-size: 20px;
    text-decoration: underline;
}

.welcome {
    font-family: "Concert One", sans-serif;
    margin: 40px 80px;
    text-align: justify;
    text-align-last: center;
}

.cases-title {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 100px 20px 20px 20px;
    font-family: "Pacifico", sans-serif;
    font-size: 60px;
    text-shadow: 0 4px 0 lightpink, 0 -4px 0 lightblue;
}

.cases {
    display: flex;
    justify-content: space-evenly;
    margin: 0px 50px;
    gap: 40px;
}

.case {
    display: flex;
    align-items: center;
    justify-content: space-around;
    background-color: rgb(193, 215, 219);
    border-radius: 110px 20px 20px 110px;
    width: 40vw;
    padding: 10px;
    gap: 10px;
    transition: all 0.2s ease-in-out 0s;
}

.case:hover {
    transform: scale(1.075);
}

.case-text {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: space-between;
    font-family: "Concert One", sans-serif;
}

.case-name {
    font-size: 25px;
    color:#2e252d;
    text-decoration: underline;
}

.case img {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border-color: black;
}

/* Footer styles */

.footer {
    background-color: #333;
    margin-top: 40px;
    color: #fff;
    padding: 10px 0;
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
}

.footer p {
    margin: 0;
}

